fix: adjust display on small screens

--- a/src/themes/basic/_layout.css
+++ b/src/themes/basic/_layout.css
@@ -425,7 +425,7 @@ body.close {
   }
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .github-corner, .sidebar-toggle, .sidebar {
     position: fixed;
   }
